kitty website updates

--- a/kitty/color-stack/index.html
+++ b/kitty/color-stack/index.html
@@ -1239,21 +1239,27 @@ color.</p>
 <p>The color encoding is inherited from the scheme used by XTerm, for
 compatibility, but a sane, rigorously specified subset is chosen.</p>
 <p>RGB colors are encoded in one of three forms:</p>
-<dl class="simple">
-<dt>rgb:&lt;red&gt;/&lt;green&gt;/&lt;blue&gt;</dt><dd><p>&lt;red&gt;, &lt;green&gt;, &lt;blue&gt; := h | hh | hhh | hhhh
-h := single hexadecimal digits (case insignificant)
-Note that h indicates the value scaled in 4 bits, hh the value scaled in 8 bits, hhh the value scaled in 12 bits, and hhhh the value scaled
-in 16 bits, respectively.</p>
+<dl>
+<dt><code class="docutils literal notranslate"><span class="pre">rgb:&lt;red&gt;/&lt;green&gt;/&lt;blue&gt;</span></code></dt><dd><div class="line-block">
+<div class="line">&lt;red&gt;, &lt;green&gt;, &lt;blue&gt; := h | hh | hhh | hhhh</div>
+<div class="line">h := single hexadecimal digits (case insignificant)</div>
+<div class="line">Note that h indicates the value scaled in 4 bits, hh the value scaled in 8 bits,
+hhh the value scaled in 12 bits, and hhhh the value scaled in 16 bits, respectively.</div>
+</div>
 </dd>
-<dt>#&lt;h…&gt;</dt><dd><p>h := single hexadecimal digits (case insignificant)
-#RGB            (4 bits each)
-#RRGGBB         (8 bits each)
-#RRRGGGBBB      (12 bits each)
-#RRRRGGGGBBBB   (16 bits each)
-The R, G, and B represent single hexadecimal digits.  When fewer than 16 bits each are specified, they represent the most significant bits
-of the value (unlike the “rgb:” syntax, in which values are scaled). For example, the string <code class="docutils literal notranslate"><span class="pre">#3a7</span></code> is the same as <code class="docutils literal notranslate"><span class="pre">#3000a0007000</span></code>.</p>
+<dt><code class="docutils literal notranslate"><span class="pre">#&lt;h...&gt;</span></code></dt><dd><div class="line-block">
+<div class="line">h := single hexadecimal digits (case insignificant)</div>
+<div class="line">#RGB            (4 bits each)</div>
+<div class="line">#RRGGBB         (8 bits each)</div>
+<div class="line">#RRRGGGBBB      (12 bits each)</div>
+<div class="line">#RRRRGGGGBBBB   (16 bits each)</div>
+<div class="line">The R, G, and B represent single hexadecimal digits.  When fewer than 16 bits
+each are specified, they represent the most significant bits of the value
+(unlike the “rgb:” syntax, in which values are scaled). For example,
+the string <code class="docutils literal notranslate"><span class="pre">#3a7</span></code> is the same as <code class="docutils literal notranslate"><span class="pre">#3000a0007000</span></code>.</div>
+</div>
 </dd>
-<dt>rgbi:&lt;red&gt;/&lt;green&gt;/&lt;blue&gt;</dt><dd><p>red, green, and blue are floating-point values between 0.0 and 1.0, inclusive. The input format for these values is an optional
+<dt><code class="docutils literal notranslate"><span class="pre">rgbi:&lt;red&gt;/&lt;green&gt;/&lt;blue&gt;</span></code></dt><dd><p>red, green, and blue are floating-point values between 0.0 and 1.0, inclusive. The input format for these values is an optional
 sign, a string of numbers possibly containing a decimal point, and an optional exponent field containing an E or e followed by  a  possibly
 signed integer string.</p>
 </dd>
