--- a/talks/pycon2024/talk.html
+++ b/talks/pycon2024/talk.html
@@ -27,7 +27,7 @@
     <ul>
         <li class="fragment">Single core performance flatlined</li>
         <li class="fragment">Performance == energy saving == battery life</li>
-        <li class="fragment">Users *love* performant software</li>
+        <li class="fragment">Users <em>love</em> performant software</li>
         <li class="fragment">I feel the need, the need for <em>speed</em></li>
     </ul>
 </section>
