Finish is it possible slide

--- a/talks/pycon2024/index.html
+++ b/talks/pycon2024/index.html
@@ -34,8 +34,17 @@
 
 <section id="is-it-even-possible">
     <h3>Is it even possible?</h3>
-    <ul>
-        <li>Hoo boy</li>
+    <ul class="fragment">
+        <li>Python is <em>slow</em> (100x slowdown)</li>
+        <li>No heroes to save us</li>
+        <li class="fragment">Nonetheless, it <strong>is</strong> possible</li>
+        <table style="font-size: 0.65em; margin-top:0.5em" class="fragment">
+            <tr><td>Terminal</td><td>Language</td><td>MB/s</td></tr>
+            <tr><td>Konsole</td><td>C++</td><td>27</td></tr>
+            <tr><td>Alacritty</td><td>Rust</td><td>54</td></tr>
+            <tr><td>GNOME Terminal</td><td>C++</td><td>62</td></tr>
+            <tr class="fragment"><td><strong>kitty<strong></td><td>Python + C</td><td><em>135</em></td></tr>
+        </table>
     </ul>
 </section>
 
