--- a/talks/pycon2024/index.html
+++ b/talks/pycon2024/index.html
@@ -74,14 +74,14 @@ code { overflow: hidden !important; }
             <pre><code data-trim data-line-numbers='3-4' class="python noslice"></code></pre>
         </div>
     </div>
-    <div class="fragment">Rate: 6.5 <em>MB/s</em> 5x faster</div>
+    <div class="fragment">Rate: 7.0 <em>MB/s</em> 5x faster</div>
 </section>
 
 <section id="memoryview">
     <h3>Intermezzo: <em>memoryview</em></h3>
     <div><pre><code data-trim class="python memoryview" data-line-numbers='2-3,6,12'></code></pre></div>
     <div class="fragment">
-        <div>Rate: 6.0 <em>MB/s</em> same speed</div>
+        <div>Rate: 6.1 <em>MB/s</em> almost same speed</div>
         <div>Binary data ⇒  <em>use memoryview</em></div>
     </div>
 </section>
@@ -93,14 +93,14 @@ code { overflow: hidden !important; }
             <pre><code data-trim data-line-numbers='1' class="python parallel1"></code></pre>
         </div>
         <div class="fragment current-visible" data-fragment-index="0">
-            <pre><code data-trim data-line-numbers='1,6' class="python parallel2"></code></pre>
+            <pre><code data-trim data-line-numbers='1,6,9,10' class="python parallel2"></code></pre>
         </div>
         <div class="fragment">
-            <pre><code data-trim data-line-numbers class="python parallel3"></code></pre>
+            <pre><code data-trim class="python parallel3"></code></pre>
         </div>
     </div>
     <div class="fragment">
-        <div>Rate: 22 <em>MB/s</em> 3x faster than noslice</div>
+        <div>Rate: 27.8 <em>MB/s</em> 4x faster than noslice</div>
         <div>20x faster than naive, but <em>50x slower</em> than native</div>
     </div>
 </section>
@@ -166,25 +166,32 @@ def parallel_part(inp: memoryview, out: memoryview) -> None:
 `,
 parallel2: `
 def chunk(i: int) -> None:
-    chunk_size = len(input_data) // num_workers
+    chunk_size = len(input_buf) // num_workers
     input_chunk = memoryview(input_buffer)[i * chunk_size:(i + 1) * chunk_size]
-    chunk_size = len(output) // num_workers
+    chunk_size = 4 * chunk_size // 3
     output_chunk = output[i * chunk_size:(i + 1) * chunk_size]
     parallel_part(input_chunk, output_chunk)
-`,
-parallel3: `
-from multiprocessing import Pool, set_start_method
-from multiprocessing.sharedctypes import RawArray
 
-set_start_method('fork')
-buffer = RawArray('B', 4 * len(input_data) // 3)
-output = memoryview(buffer).cast('B')
-pool = Pool()
 
 def parallel_encode(input_bytes: bytes) -> bytes:
     pool.map(chunk, range(os.cpu_count()))
     return bytes(output)
+`,
+parallel3: `
+from multiprocessing import Pool, shared_memory
 
+shm = shared_memory.SharedMemory(create=True, size=input_size + output_size)
+input_buf = shm.buf[:input_size]
+output = shm.buf[input_size:]
+
+def connect_to_shm():
+    global input_buf, output
+    shm = shared_memory.SharedMemory(shm.name)
+    input_buf = shm.buf[:input_size]
+    output = shm.buf[input_size:]
+
+
+pool = Pool(num_workers, connect_to_shm)
 `,
 }
 Object.entries(code_blocks).forEach(([classname, code]) => {
