--- a/talks/pycon2024/index.html
+++ b/talks/pycon2024/index.html
@@ -100,8 +100,9 @@ code { overflow: hidden !important; }
         </div>
     </div>
     <div class="fragment">
-        <div>Rate: 27.8 <em>MB/s</em> 4x faster than noslice</div>
-        <div>20x faster than naive, but <em>50x slower</em> than native</div>
+        <div>Rate: 27.8 <em>MB/s</em> 4x noslice</div>
+        <div>20x naive, but <em>50x slower</em> than native</div>
+        <div><em>NoGIL</em> ⇒  simpler and more performant</div>
     </div>
 </section>
 
