--- a/talks/pycon2024/index.html
+++ b/talks/pycon2024/index.html
@@ -102,7 +102,20 @@ code { overflow: hidden !important; }
     <div class="fragment">
         <div>Rate: 27.8 <em>MB/s</em> 4x noslice</div>
         <div>20x naive, but <em>50x slower</em> than native</div>
-        <div><em>NoGIL</em> ⇒  simpler and more performant</div>
+        <div><em>Cheating</em> not faster, just wider</div>
+    </div>
+</section>
+
+<section id="python+c">
+    <h3>Python + C</h3>
+    <div>Python’s performance superpower: C code</div>
+    <pre class="fragment"><code data-trim class="python">from base64 import standard_b64encode</code></pre>
+    <div class="fragment"><div>Rate: 1.3 <em>GB/s</em> almost native base64</div>
+    <h3 class="fragment">Phew! Are we done?</h3>
+    <div class="fragment">
+        <div>Python’s Achilles heel: stdlib bitrot</div>
+        <div>We can do <em>much better</em></div>
+    </div>
     </div>
 </section>
 
