Code to download all resources in talk files so that we have a single file talk

--- a/talks/pycon2024/talk.html
+++ b/talks/pycon2024/talk.html
@@ -11,7 +11,7 @@
         <!-- The theme for this presentation -->
         <link rel="stylesheet" href="https://unpkg.com/reveal.js@^5//dist/theme/dracula.css" id="theme">
         <!-- The theme for syntax highlighting -->
-        <link rel="stylesheet" href="https://unpkg.com/reveal.js@^5//plugin/highlight/monokai.css" id="theme">
+        <link rel="stylesheet" href="https://unpkg.com/reveal.js@^5//plugin/highlight/monokai.css">
 	</head>
 	<body> <div class="reveal"> <div class="slides">
 <!-- }}} -->
