--- a/talks/pycon2024/talk.html
+++ b/talks/pycon2024/talk.html
@@ -65,7 +65,7 @@ code { overflow: hidden !important; }
 </section>
 
 <section id="fix-naive">
-    <h3>Do not be naive</h3>
+    <h3>Add some street smarts</h3>
     <div class="r-stack code-blocks">
         <div class="fragment fade-out" data-fragment-index="0">
             <pre><code data-trim data-line-numbers='5' class="python naive_implementation"></code></pre>
