Add a little celebration GIF

--- a/talks/pycon2024/talk.html
+++ b/talks/pycon2024/talk.html
@@ -216,7 +216,8 @@ py_base64(PyObject *self, PyObject *args, Py_ssize_t nargs) {
     return ans;
 }
     </script></code></pre>
-    <div class="fragment">Rate: 21.5 <em>GB/s</em> 20x native!!</div>
+    <div class="fragment">Rate: 21.5 <em>GB/s</em> 20x native!!
+        <img style="width: 2em; height: 2em; margin: 0; vertical-align: bottom" src="celebrate.gif"></div>
 </section>
 
 <script>
