Update single file

--- a/talks/pycon2024/talk.html
+++ b/talks/pycon2024/talk.html
@@ -311,11 +311,12 @@ static PyModuleDef_Slot slots[] = {
 <section id="takeaways">
     <h3>Key takeaways</h3>
     <ul>
-        <li>Profile and identify</li>
-        <li>Look for pure Python opportunities</li>
-        <li>Eliminate extra copies</li>
-        <li>Use <em>memoryview</em> for binary data</li>
-        <li>Don’t be afraid to use C when needed</li>
+        <li>Python programs can be very fast</li>
+        <li class="fragment">Profile and identify</li>
+        <li class="fragment">Look for pure Python opportunities</li>
+        <li class="fragment">Eliminate extra copies</li>
+        <li class="fragment">Use <em>memoryview</em> for binary data</li>
+        <li class="fragment">Don’t be afraid to use C when needed</li>
     </ul>
 </section>
 
