--- a/talks/pycon2024/talk.html
+++ b/talks/pycon2024/talk.html
@@ -310,8 +310,8 @@ static PyModuleDef_Slot slots[] = {
 
 <section id="takeaways">
     <h3>Key takeaways</h3>
+    <h6>Python programs can be <em>very fast</em></h6>
     <ul>
-        <li>Python programs can be very fast</li>
         <li class="fragment">Profile and identify</li>
         <li class="fragment">Look for pure Python opportunities</li>
         <li class="fragment">Eliminate extra copies</li>
