--- a/talks/pycon2024/talk.html
+++ b/talks/pycon2024/talk.html
@@ -19,6 +19,47 @@
 <style>
 code { overflow: hidden !important; }
 .r-stack.code-blocks .fragment { width: 100%; }
+
+@font-face {
+  font-family: 'Raleway';
+  font-style: italic;
+  font-weight: 100 900;
+  font-display: swap;
+  src: url(../fonts/Raleway-Italic-VariableFont_wght.ttf);
+}
+
+@font-face {
+  font-family: 'Raleway';
+  font-style: normal;
+  font-weight: 100 900;
+  font-display: swap;
+  src: url(../fonts/Raleway-VariableFont_wght.ttf);
+}
+
+@font-face {
+  font-family: 'Victor Mono';
+  font-style: italic;
+  font-weight: 100 700;
+  font-display: swap;
+  src: url(../fonts/VictorMono-Italic-VariableFont_wght.ttf);
+}
+
+@font-face {
+  font-family: 'Victor Mono';
+  font-style: normal;
+  font-weight: 100 700;
+  font-display: swap;
+  src: url(../fonts/VictorMono-VariableFont_wght.ttf);
+}
+
+:root {
+    --r-heading-font: 'Raleway';
+    --r-heading-font-weight: 600;
+    --r-code-font: 'Victor Mono';
+    --r-main-font: 'Raleway';
+    --r-inline-code-color: var(--r-main-color);
+}
+
 </style>
 
 <section id="title">
@@ -59,9 +100,9 @@ code { overflow: hidden !important; }
         head -c 1073741824 < /dev/urandom > /dev/shm/data
         hyperfine 'base64 -w 0 < /dev/shm/data > /dev/null'
     </code></pre>
-    Rate: 1.6 <em>GB/s</em>
+    Rate: <code>1.6</code> <em>GB/s</em>
     <div class="fragment"><pre><code data-trim class="python naive_implementation"></code></pre></div>
-    <div class="fragment">Rate: 1.2 <em>MB/s</em> 1000x slower!!</div>
+    <div class="fragment">Rate: <code>1.2</code> <em>MB/s</em> 1000x slower!!</div>
 </section>
 
 <section id="fix-naive">
@@ -86,7 +127,7 @@ def noslice(inp: bytes) -> bytes:
             </script></code></pre>
         </div>
     </div>
-    <div class="fragment">Rate: 7.0 <em>MB/s</em> 5x faster</div>
+    <div class="fragment">Rate: <code>7.0</code> <em>MB/s</em> 5x faster</div>
 </section>
 
 <section id="memoryview">
@@ -107,7 +148,7 @@ def memview(input_bytes: bytes) -> bytes:
     return bytes(output)
         </script></code></pre></div>
     <div class="fragment">
-        <div>Rate: 6.1 <em>MB/s</em> almost same speed</div>
+        <div>Rate: <code>6.1</code> <em>MB/s</em> almost same speed</div>
         <div>Binary data ⇒  <em>use memoryview</em></div>
     </div>
 </section>
@@ -164,7 +205,7 @@ pool = Pool(num_workers, connect_to_shm)
         </div>
     </div>
     <div class="fragment">
-        <div>Rate: 27.8 <em>MB/s</em> 4x noslice</div>
+        <div>Rate: <code>27.8</code> <em>MB/s</em> 4x noslice</div>
         <div>20x naive, but <em>50x slower</em> than native</div>
         <div><em>Cheating</em> not faster, just wider</div>
     </div>
@@ -174,7 +215,7 @@ pool = Pool(num_workers, connect_to_shm)
     <h3>Python + C</h3>
     <div>Python’s performance superpower: C code</div>
     <pre class="fragment"><code data-trim class="python">from base64 import standard_b64encode</code></pre>
-    <div class="fragment"><div>Rate: 1.3 <em>GB/s</em> almost native base64</div>
+    <div class="fragment"><div>Rate: <code>1.3</code> <em>GB/s</em> almost native base64</div>
     <h3 class="fragment">Phew! Are we done?</h3>
     <div class="fragment">
         <div>Python’s Achilles heel: stdlib bitrot</div>
@@ -215,7 +256,7 @@ py_base64(PyObject *self, PyObject *input_data) {
     return ans;
 }
     </script></code></pre>
-    <div class="fragment">Rate: 21.5 <em>GB/s</em> 20x native!!
+    <div class="fragment">Rate: <code>21.5</code> <em>GB/s</em> 20x native!!
         <img style="width: 2em; height: 2em; margin: 0; vertical-align: bottom" src="celebrate.gif"></div>
 </section>
 
