add link to benchmark code

--- a/talks/pycon2024/talk.html
+++ b/talks/pycon2024/talk.html
@@ -359,6 +359,11 @@ static PyModuleDef_Slot slots[] = {
         <li class="fragment">Use <em>memoryview</em> for binary data</li>
         <li class="fragment">Don’t be afraid to use C when needed</li>
     </ul>
+    <div class="fragment" style="margin-top: 1em"><small>Benchmark code available at:
+        <a href="https://sw.kovidgoyal.net/talks/pycon2024/code.py">
+            sw.kovidgoyal.net/talks/pycon2024/code.py
+        </a>
+    </div>
 </section>
 
 <script>
