Move slide numbers to bottom left

--- a/talks/pycon2024/index.html
+++ b/talks/pycon2024/index.html
@@ -19,6 +19,10 @@
 <style>
 code { overflow: hidden !important; }
 .r-stack.code-blocks .fragment { width: 100%; }
+.reveal .slide-number {  /* move slide number to the left */
+    right: initial;
+    margin-left: 1em;
+}
 
 @font-face {
   font-family: 'Raleway';
