Add a historical note about kitty

--- a/talks/pycon2024/talk.html
+++ b/talks/pycon2024/talk.html
@@ -113,6 +113,8 @@ code { overflow: hidden !important; }
     <pre style="text-align: center"><code data-trim><script type="text/template">
     text … <ESC> control; data <terminator> … text …
     </script></code></pre>
+    <div class="fragment">Started because I wanted to use vim in the terminal
+        with squiggly <span style="text-decoration: red underline wavy">underlines</span></div>
     </div>
 </section>
 
@@ -390,8 +392,7 @@ static PyModuleDef_Slot slots[] = {
         <li class="fragment">The <a href="https://github.com/google/gumbo-parser">Gumbo C HTML 5 parser</a></li>
         <li class="fragment">A simple translation: <a href="https://github.com/kovidgoyal/html5-parser">kovidgoyal/html5-parser</a></li>
         <li class="fragment">Under 1000 lines of C code</li>
-        <li class="fragment">Rate: <code>28.1</code> MB/s
-            <code><em>~28x</em></code></li>
+        <li class="fragment">Rate: <code>28.1</code> MB/s <code><em>~28x</em></code></li>
     </ul>
 </section>
 
